[tool]

[tool.poetry]
name = "yewtube"
version = "1.1.4"
description = "A Terminal based YouTube player and downloader. No Youtube API key required. Forked from mps-youtube"
license = "GPLv3"
keywords = [
  "video",
  "music",
  "audio",
  "youtube",
  "stream",
  "download",
]
classifiers = [
  "Topic :: Utilities",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Topic :: Multimedia :: Video",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Environment :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS 9",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft",
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Operating System :: Microsoft :: Windows :: Windows XP",
  "Operating System :: Microsoft :: Windows :: Windows Vista",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
homepage = "https://github.com/iamtalhaasghar/yewtube"
authors = ["talha_programmer <talhaasghar.contact@simplelogin.fr>"]
readme = "README.md"
packages = [
{include = 'mps_youtube'},
{include = 'mps_youtube/commands'},
{include = 'mps_youtube/listview'},
{include = 'mps_youtube/players'},
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pyperclip = "^1.8.2"
youtube-search-python = "^1.6.2"
yt-dlp = "^2022.2.4"
pyreadline3 = {version = "^3.4.1", platform = "win32"}
dbus-python = {version = "^1.2.18", extras = ["mpris"]}
PyGObject = {version = "^3.42.0", extras = ["mpris"]}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
better-exceptions = "^0.3.3"
pytest = "^7.0.1"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-macros-plugin = "^0.6.4"
mkdocs-material = "^8.2.1"
mkdocstrings-python-legacy = "^0.2.2"
mkdocstrings = "^0.18.0"

[tool.poetry.scripts]
yt = 'mps_youtube:main.main'
